# claudy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py  worldmap.cpp
.claude/: settings.json
.claude-plugin/: marketplace.json  mcp.json
.claude/skills/claudy-orchestration/: SKILL.md
.claude/skills/claudy-orchestration/references/: cli_reference.md
claudy/: __init__.py  __main__.py  cli.py  config.py  mcp_server.py  stdio_proxy.py
docs/: getting_started.md  mcp_setup.md
examples/: claudy-improvements-summary.md  guide.md  rule.md  simple_test  simple_test.cpp  world_map.cpp  world_map_solution.md  world_map_test  world_map_test.cpp
examples/ioi-tests/: festival.cpp  festival.md  souvenirs.cpp  souvenirs.md  triples.cpp  worldmap.cpp  worldmap.md
examples/simple_test.dSYM/Contents/Resources/DWARF/: simple_test
