[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudy"
version = "0.1.0"
description = "Universal Claude agent manager with CLI, HTTP API, and MCP integration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kang Jihyeok", email = "your.email@example.com" }]
keywords = ["claude", "agent", "ai", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = ["claude-agent-sdk>=0.1.4", "fastmcp>=2.12.0"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "build>=0.10.0",
]

[project.scripts]
claudy = "claudy.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/claudy"
Documentation = "https://github.com/yourusername/claudy#readme"
Repository = "https://github.com/yourusername/claudy"
Issues = "https://github.com/yourusername/claudy/issues"

[tool.setuptools]
packages = ["claudy"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
