[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "claudy"
version = "0.1.0"
description = "Universal Claude agent manager with CLI, HTTP API, and MCP integration"
readme = "README.md"
authors = ["Kang Jihyeok <your.email@example.com>"]
license = "MIT"
keywords = ["claude", "agent", "ai", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "claudy"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
claude-agent-sdk = ">=0.1.4"
fastmcp = ">=2.12.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.0"
ruff = ">=0.1.0"
build = ">=0.10.0"

[tool.poetry.scripts]
claudy = "claudy.cli:main"

[tool.poetry.urls]
Homepage = "https://github.com/yourusername/claudy"
Documentation = "https://github.com/yourusername/claudy#readme"
Repository = "https://github.com/yourusername/claudy"
Issues = "https://github.com/yourusername/claudy/issues"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
